--- a/floats.css
+++ b/floats.css
@@ -1,30 +1,27 @@
 .container {
     background: orange;
-    max-width: 1000px;
+    max-width: 800px;
     margin: 0 auto;
+    display: grid;
+    grid-template-areas: "header header header" "menu content content" "footer footer footer";
 }
 
 .header {
     background: purple;
-    height: 60px;
-}
-
-.wrapper{
-    background: green;
-    display: flex;
-    /*flex-direction: row-reverse;*/
+    grid-area: header;
 }
 
 .menu{
     background: silver;
-    width: 30%;
+    grid-area: menu;
 }
 
 .content{
     background: aqua;
-    width: 70%;
+    grid-area: content;
 }
 
 .footer{
     background: pink;
+    grid-area: footer;
 }
